--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1572,6 +1572,172 @@ img.full-width {
     @media (min-width: 1200px) {  
     }
 
+/*Components & Styles Page
+---------------------------------------------------------*/
+.cs-page header {
+    width: 100%;
+    padding: 30px 0 30px 0;
+    margin-bottom: 50px;
+    background-color: #ff6f69;
+}
+.cs-page .top-space { margin-top: 60px; }
+.cs-page .bottom-space { margin-bottom: 40px; }
+.cs-page .top-space-extra { margin-top: 80px; }
+.cs-page header .btn {
+    margin-top: 27px;
+}
+h2.cs-heading {
+    width: 100%;
+    text-transform: uppercase;
+    color: #777777;
+    font-size: 2.35em;
+    padding-bottom: 23px;
+    border-bottom: 1px solid #e8e8e8;
+    margin-top: 65px;
+    margin-bottom: 10px;
+}
+h3.cs-heading {
+    font-weight: 100;
+    margin-bottom: 45px;
+    color: #777777;
+}
+.less-space {
+    margin-bottom: 25px !important;
+}
+.cs-page .devider {
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: #e8e8e8;
+    margin-bottom: 15px;
+}
+.icon-set {
+    width: 100%;
+}
+.icon-set i {
+    display: inline-block;
+    font-size: 2.5em;
+    margin: 0 20px 20px 0;
+}
+.icon-set span {
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;
+    font-size: 1.5em;
+    font-weight: 300;
+}
+.icon-set + .btn {
+    margin-top: 25px;
+}
+.icon-set + .btn i {
+    font-size: 1.1em;
+}
+.cs-page .gallery {
+    margin: 0 0 0 -40px;
+}
+.cs-page .footer {
+    width: 100%;
+    padding: 30px 0 30px 0;
+    margin-top: 60px;
+    background-color: #ff6f69;
+}
+.cs-page .footer .btn-up {
+    margin-top: 22px;
+}
+.cs-page .footer .btn-up i {
+    margin: 0;
+    font-size: 1.2em;
+}
+.cs-page .footer .copyright {
+    color: #ffffff;
+    margin: 10px 0 0 0;
+    text-align: left;
+}
+.cs-page .footer .copyright a {
+    font-weight: 500;
+    color: #ffffff;
+    text-decoration: underline;
+}
+.cs-page .footer .copyright a:hover {
+    text-decoration: none;
+}
+.cs-page .countdown {
+    color: #313447;
+    margin-bottom: 0px;
+}
+
+/*Pricing Plans
+---------------------------------------------------------*/
+.pricing-plan {
+    width: 100%;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+  border-radius: 5px;
+}
+.pricing-plan .header {
+    padding: 25px 20px 18px 20px;
+    text-align: center;
+    background-color: #313447;
+    -webkit-border-radius: 5px 5px 0 0;
+    -moz-border-radius: 5px 5px 0 0;
+  border-radius: 5px 5px 0 0;
+}
+.pricing-plan .header h3 {
+    font-size: 1.7em;
+    color: #ffffff;
+    font-weight: 300;
+    text-transform: uppercase;
+    margin: 0 0 8px 0;
+    line-height: 1.2;
+}
+.pricing-plan .price {
+    font-size: 2.6em;
+    color: #ffffff;
+    font-weight: 700;
+}
+.pricing-plan .body {
+    padding: 40px 0 15px 0;
+    background-color: #e7e7ea;
+    -webkit-border-radius: 0 0 5px 5px;
+    -moz-border-radius: 0 0 5px 5px;
+  border-radius: 0 0 5px 5px;
+}
+.pricing-plan.highlited .body {
+    background-color: #ff6f69;
+}
+.pricing-plan .body ul {
+    text-align: center;
+    padding: 0px;
+    margin: 0 0 90px 0;
+    line-height: 1.3;
+    font-size: 1.3em;
+    font-weight: 300;
+}
+.pricing-plan.highlited .body ul {
+    color: #ffffff;
+}
+.pricing-plan .body ul li {
+    padding: 18px 20px;
+    border-bottom: 1px solid #313447;
+}
+.pricing-plan.highlited .body ul li {
+    border-bottom: 1px solid #ffffff;
+}
+.pricing-plan .body ul li:before {
+    display: none;
+}
+.pricing-plan .body ul li:last-child {
+    border-bottom: none;
+}
+.pricing-plan .buy-btn {
+    width: 100%;
+    padding: 0 45px;
+}
+.pricing-plan .buy-btn .btn {
+    width: 100%;
+}
+
+/* End pricing plans
+---------------------------------------------------------*/
+
 .heading-center {
     text-align: center;
 }
