--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1850,6 +1850,49 @@ h3.cs-heading {
 /* End accordion
 ---------------------------------------------------------*/
 
+/*Images
+---------------------------------------------------------*/
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+.img-rounded {
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+}
+.img-thumbnail,
+.img-circle-thumbnail {
+  padding: 5px;
+  border: 1px solid #313447;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  line-height: 1.428571429;
+  background-color: #ffffff;
+  display: inline-block;
+  max-width: 100%;
+  height: auto;
+}
+.img-circle-thumbnail {
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+}
+.img-circle {
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+}
+.img-center {
+    display: table;
+    margin: auto;
+}
+
+/* End accordion
+---------------------------------------------------------*/
+
 
 /*Team
 ---------------------------------------------------------*/
@@ -1912,5 +1955,27 @@ h5.weeks {
 
 p.weeks {
     font-weight: bold;
-    margin-top: .5em;
+    margin: .5em;
+}
+
+.typeform-date {
+    text-align: center;
+    width: 100%;
+    margin: 1em 0em;
+}
+
+.typeform-cost {
+    text-align: center;
+    width: 100%;
+    margin-top: 0em;
+}
+
+.typeform-button {
+    background-color: rgba(31, 20, 58, .8) !important;
+    border-color: rgba(31, 20, 58, .8) !important;
+    width: 100%;
+}
+
+.temp-modal {
+    height: 300px;
 }
