--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -2025,3 +2025,21 @@ p.weeks {
     -1px 1px 0 white,
     1px 1px 0 white;  */
 }
+
+.date-table .header {
+    padding: 25px 20px 18px 20px;
+    background-color: rgba(0, 115, 65, .4);
+    text-align: center;
+    -webkit-border-radius: 5px 5px 0 0;
+    -moz-border-radius: 5px 5px 0 0;
+    border-radius: 5px 5px 0 0;
+}
+
+.date-table .body {
+    padding: 0px 0px 220px 0px;
+    text-align: center;
+    background-color: rgba(0, 115, 65, .4);
+    -webkit-border-radius: 0 0 5px 5px;
+    -moz-border-radius: 0 0 5px 5px;
+    border-radius: 0 0 5px 5px;
+}
