--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1740,13 +1740,18 @@ h3.cs-heading {
     border-bottom: 1px solid rgb(0, 115, 65);
 }
 .pricing-plan.highlited .body ul li {
-    border-bottom: 1px solid #ffffff;
+    border-width: 1px 1px 0px 1px;
+    border-style: solid;
+    border-color: #ffffff;
 }
 .pricing-plan .body ul li:before {
     display: none;
 }
+.pricing-plan .body ul li:first-child {
+    border-top: none;
+}
 .pricing-plan .body ul li:last-child {
-    border-bottom: none;
+    border-bottom: 1px solid #ffffff;
 }
 .pricing-plan .buy-btn {
     width: 100%;
@@ -1950,7 +1955,7 @@ p.weeks {
 
 .typeform-date {
     text-align: center;
-    margin-top: 2em;
+    margin-top: 5em;
 }
 
 .typeform-cost {
@@ -2076,4 +2081,28 @@ p.weeks {
 }
 .address-b h3 {
     padding-top: 1em;
+}
+
+.overview-p {
+    font-size: 1.2em;
+}
+
+.round-1 {
+    border-radius: 70px 70px 0px 0px;
+    border: 1px solid #fff;
+}
+
+.round-2 {
+    border-radius: 70px 70px 0px 0px !important;
+    border: 1px solid #fff;
+}
+
+.round-3 {
+    border-radius: 0px 0px 70px 70px;
+    border: 1px solid #fff !important;
+}
+
+.round-4 {
+    border-radius: 70px;
+    border: 1px solid #fff !important;
 }
