--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -2180,12 +2180,16 @@ div.address-b {
     margin: 2em 0em;
 }
 
-#promo-video {
-    margin-left: 18%;
+.videoWrapper {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 25px;
+    height: 0;
 }
-@media (max-width: 1000px) {
-        #promo-video {
-            margin-left: 0%;
-        }
-    }
-
+.videoWrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
