some general updates

--- a/public/assets/styles/css/theme.css
+++ b/public/assets/styles/css/theme.css
@@ -162,8 +162,8 @@ br[class*="spacer"] {
 .navbar-default .navbar-nav > .dropdown > a .caret,
 .navbar-default .navbar-nav > .dropdown > a:hover .caret,
 .navbar-default .navbar-nav > .dropdown > a:focus .caret {
-  border-top-color: #ffffff;
-  border-bottom-color: #ffffff;
+  border-top-color: #006a36;
+  border-bottom-color: #006a36;
 }
 .navbar-default .navbar-collapse {
   border-color: #14171a;
@@ -828,6 +828,8 @@ br[class*="spacer"] {
   border-right-color: #ffffff;
 }
 
+/*Custom CSS*/
+
 .videoWrapper {
     position: relative;
     padding-bottom: 56.25%; /* 16:9 */
@@ -841,4 +843,30 @@ br[class*="spacer"] {
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+.nav-bar-highlight {
+  color: #006a36 !important;
+  background-color: #14171a;
+}
+
+.h1-resizing {
+    font-size: 2.45em !important;
+    display: inline-block; 
+    width: 100%; 
+}
+
+.top-panel-emphasis {
+    color: #005630;
+}
+
+#top-panel-subtext {
+    display: inline-block; 
+    width: 100%; 
+}
+
+#panel-top-text {
+  text-align: left;
+  font-size: 2em;
+  padding-bottom: 60px;
 }
