--- a/public/assets/styles/css/theme.css
+++ b/public/assets/styles/css/theme.css
@@ -1042,3 +1042,42 @@ br[class*="spacer"] {
         margin-right: -20%;
       }
     }
+
+.testimonial { 
+  margin: 0; 
+  background: #006a36;
+  padding: 10px 50px;     
+  position: relative;     
+  font-family: Georgia, serif;     
+  color: #fff;     
+  border-radius: 5px;     
+  font-style: italic;     
+  background-image: linear-gradient(#006a36, #006a36);
+  } .testimonial:before, .testimonial:after {     
+    content: "\201C";
+    position: absolute;     
+    font-size: 80px;
+    line-height: 1;
+    color: #999;     
+    font-style: normal;
+    } .testimonial:before {     
+      top: 0;     
+      left: 10px;
+     } .testimonial:after {     
+      content: "\201D";     
+      right: 10px;     
+      bottom: -0.5em; 
+      } .arrow-down {     
+        width: 0;     
+        height: 0;     
+        border-left: 15px solid transparent;     
+        border-right: 15px solid transparent;     
+        border-top: 15px solid #006a36;     
+        margin: 0 0 0 25px; } .testimonial-author {     
+          margin: 0 0 0 25px;     
+          font-family: Arial, Helvetica, sans-serif;     
+          color: #999;     
+          text-align:left;
+           } .testimonial-author span {     
+            font-size: 12px;     
+            color: #666; } 
