--- a/public/assets/styles/css/theme.css
+++ b/public/assets/styles/css/theme.css
@@ -1081,3 +1081,32 @@ br[class*="spacer"] {
            } .testimonial-author span {     
             font-size: 12px;     
             color: #666; } 
+
+#sample-day-carousel .item{
+  margin: 3px;
+}
+#sample-day-carousel .item img{
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.h2-resize h2 {
+  font-size: 2.5em;
+  margin-bottom: 2em;
+}
+
+.box-text {
+  font-size: 1.5em;
+  margin-top: 1em;
+}
+
+.box-text-address {
+  font-size: 1.5em;
+  margin-top: 1em;
+  line-height: .825em;
+}
+
+.faq img {
+  margin-bottom: 25px; 
+}
