--- a/public/assets/styles/css/theme.css
+++ b/public/assets/styles/css/theme.css
@@ -1051,7 +1051,7 @@ br[class*="spacer"] {
   font-family: Georgia, serif;     
   color: #fff;     
   border-radius: 5px;     
-  font-style: italic;     
+  font-style: normal;     
   background-image: linear-gradient(#006a36, #006a36);
   } .testimonial:before, .testimonial:after {     
     content: "\201C";
@@ -1078,6 +1078,7 @@ br[class*="spacer"] {
           font-family: Arial, Helvetica, sans-serif;     
           color: #999;     
           text-align:left;
+          font-size: 1.25em;
            } .testimonial-author span {     
             font-size: 12px;     
             color: #666; } 
@@ -1236,4 +1237,12 @@ br[class*="spacer"] {
 
 #accordion-faq .panel {
   padding-top: 1.25em;
+}
+
+.contact-image {
+  padding-bottom: 3em;
+}
+
+.contact-us-link {
+  font-size: 1.5em;
 }
