--- a/public/assets/styles/css/theme.css
+++ b/public/assets/styles/css/theme.css
@@ -746,6 +746,7 @@ br[class*="spacer"] {
 .plan .plan-info {
   padding: 20px;
   background: #1f2329;
+  text-align: left;
 }
 .plan .plan-price h1 {
   font-size: 60px;
