--- a/public/assets/styles/css/theme.css
+++ b/public/assets/styles/css/theme.css
@@ -1098,6 +1098,10 @@ br[class*="spacer"] {
   margin-bottom: 2em;
 }
 
+.h2-resize-no-pad h2 {
+  font-size: 2.5em;
+}
+
 .box-text {
   font-size: 1.5em;
   margin-top: 1em;
@@ -1250,4 +1254,31 @@ br[class*="spacer"] {
 
 .mushroom-menu-button {
   width: 49%;
+}
+
+.strike {
+  position: relative;
+}
+.strike:before {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 50%;
+  right: 0;
+  border-top: 4px solid;
+  border-color: red;
+
+  -webkit-transform:rotate(-20deg);
+  -moz-transform:rotate(-20deg);
+  -ms-transform:rotate(-20deg);
+  -o-transform:rotate(-20deg);
+  transform:rotate(-20deg);
+}
+
+#summer-price-size {
+  font-size: 2.5em;
+}
+
+.tutoring-price-size {
+  font-size: 4em;
 }
