--- a/public/assets/styles/css/theme.css
+++ b/public/assets/styles/css/theme.css
@@ -1281,3 +1281,38 @@ br[class*="spacer"] {
 .tutoring-price-size {
   font-size: 4em;
 }
+
+.modal-body {
+    position: relative; /* needed for the overlay to extend when you scroll */
+    /* general styles */
+}
+
+.modal-html {
+    margin: 0;
+    min-height: 100%;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 10;
+}
+
+/* just some content with arbitrary styles for explanation purposes */
+.modal-camp {
+    width: 540px;
+    height: 380px;
+    line-height: 200px;
+    position: fixed;
+    top: 50%; 
+    left: 50%;
+    margin-top: -280px;
+    margin-left: -250px;
+    border-radius: 5px;
+    text-align: center;
+    z-index: 11; /* 1px higher than the overlay layer */
+}
