removed weird blue outline on modal

--- a/public/assets/styles/css/theme.css
+++ b/public/assets/styles/css/theme.css
@@ -1407,5 +1407,9 @@ br[class*="spacer"] {
 }
 
 #myModal {
-  top: 30%;
+  margin-top: 10%;
+}
+
+.modal-open .modal,.btn:focus{
+    outline:none!important;
 }
