--- a/public/assets/styles/css/theme.css
+++ b/public/assets/styles/css/theme.css
@@ -1407,9 +1407,42 @@ br[class*="spacer"] {
 }
 
 #myModal {
-  margin-top: 10%;
+
+}
+
+#modal-custom {
+  background: url("../../images/congruent_outline.png");
+  padding: 20px;
+}
+
+#modal-custom .modal-header {
+  border: none;
+}
+
+#modal-custom .modal-footer {
+  border: none;
+}
+
+.modal-body {
+  text-align: center;
+  color: white;
+  font-size: 1.5em;
+}
+
+.modal-body img {
+  width: 300px;
+}
+
+.modal-body p {
+  margin: 20px 0;
 }
 
 .modal-open .modal,.btn:focus{
     outline:none!important;
+}
+
+#close-custom {
+  opacity: 1;
+  color: #fff;
+  text-shadow: none;
 }
