--- a/public/assets/styles/css/theme.css
+++ b/public/assets/styles/css/theme.css
@@ -1446,3 +1446,10 @@ br[class*="spacer"] {
   color: #fff;
   text-shadow: none;
 }
+
+@media only screen 
+and (min-width : 321px) {
+  #timeline-logo {
+    width: 400px;
+  }
+}
