--- a/public/assets/styles/css/class.css
+++ b/public/assets/styles/css/class.css
@@ -23,3 +23,18 @@
   margin-top: 20px;
   margin-left: 20px;
 }
+
+.videoWrapper {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 25px;
+    height: 0;
+    margin-bottom: 1em;
+}
+.videoWrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
