--- a/public/assets/styles/css/theme.css
+++ b/public/assets/styles/css/theme.css
@@ -1406,10 +1406,6 @@ br[class*="spacer"] {
   border-color: #f9d200 !important;
 }
 
-#myModal {
-
-}
-
 #modal-custom {
   background: url("../../images/congruent_outline.png");
   padding: 20px;
@@ -1436,6 +1432,9 @@ br[class*="spacer"] {
 .modal-body p {
   margin: 20px 0;
 }
+.modal-body h2 {
+  color: white;
+}
 
 .modal-open .modal,.btn:focus{
     outline:none!important;
@@ -1447,9 +1446,28 @@ br[class*="spacer"] {
   text-shadow: none;
 }
 
-@media only screen 
-and (min-width : 321px) {
+@media (max-width: 768px) {
   #timeline-logo {
-    width: 400px;
+    opacity: 0;
   }
+}
+
+.vertical-alignment-helper {
+    display:table;
+    height: 100%;
+    width: 100%;
+    pointer-events:none; /* This makes sure that we can still click outside of the modal to close it */
+}
+.vertical-align-center {
+    /* To center vertically */
+    display: table-cell;
+    vertical-align: middle;
+    pointer-events:none;
+}
+.modal-content {
+    /* Bootstrap sets the size of the modal in the modal-dialog class, we need to inherit it */
+    width:inherit;
+    height:inherit;
+    /* To center horizontally */
+    margin: 0 auto;
 }
