changed media query for landscape viewing

--- a/public/assets/styles/css/theme.css
+++ b/public/assets/styles/css/theme.css
@@ -1446,7 +1446,7 @@ br[class*="spacer"] {
   text-shadow: none;
 }
 
-@media (max-width: 768px) {
+@media (orientation: landscape) {
   #timeline-logo {
     opacity: 0;
   }
