--- a/public/assets/styles/css/theme.css
+++ b/public/assets/styles/css/theme.css
@@ -1343,7 +1343,7 @@ br[class*="spacer"] {
   margin-top: 110px;
 }
 
-@media handheld (orientation: landscape) {
+@media (max-width: 700px) {
   #timeline-logo {
     opacity: 0;
   }
