--- a/public/assets/styles/css/theme.css
+++ b/public/assets/styles/css/theme.css
@@ -1339,8 +1339,8 @@ br[class*="spacer"] {
 
 #timeline-logo {
   width: 270px;
-  margin-left: 250px;
-  margin-top: 110px;
+  margin-left: 10%;
+  margin-top: 5%;
 }
 
 @media (max-width: 700px) {
